namespace _Game.Common
{
    public static class GameConfig
    {
        public const string PATH_UI = "UI/"; // duong dan toi cac canvas UI trong Resources
        
        // anim
        public const string ANIM_TILE_APPEAR = "appear"; // ten cua trigger khi tile xuat hien
        public const string ANIM_TILE_DISAPPEAR = "disappear"; // ten cua trigger khi tile bien mat
        public const string ANIM_TILE_SELECT = "selecting"; // ten cua trigger khi tile duoc chon
        public const string ANIM_TILE_UNSELECT = "unselecting"; // ten cua trigger khi tile khong duoc chon
    }
}